--- a/ewm-service/src/main/resources/application-check.yaml
+++ b/ewm-service/src/main/resources/application-check.yaml
@@ -1,11 +1,10 @@
 server:
   port: 8080
 
-services:
-  stats-server:
-    url: http://stats-server:9090
-
 spring:
+  h2:
+    console:
+      enabled: true
   jpa:
     hibernate:
       ddl-auto: none
@@ -15,12 +14,14 @@ spring:
   mvc:
     format:
       date-time: yyyy-MM-dd HH:mm:ss
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
   sql:
     init:
       mode: always
   datasource:
-    driverClassName: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/ewm
+    driverClassName: org.h2.Driver
+    url: jdbc:h2:file:./db/ewm
     username: user
     password: password
 
